# kkc-plugins

./: ADDING_TO_STORE.md  README.MD  release.sh
.github/workflows/: recompile-store-index-on-tag.yml
applications/bat/: apps.toml
applications/bookokrat/: apps.toml
applications/helix/: apps.toml
applications/imgcat/: apps.toml
applications/micro/: apps.toml
applications/opencubicplayer/: apps.toml
applications/ttymap/: apps.toml
plugins/amiga_adf/: plugin.lua  plugin.toml
plugins/amsdos_viewer/: plugin.toml
plugins/amsdos_viewer/assets/: plugin.lua
plugins/amstrad_dsk/: plugin.toml
plugins/amstrad_dsk/assets/: dsk.lua  plugin.lua
plugins/commodore_d64/: plugin.toml
plugins/commodore_d64/assets/: plugin.lua
plugins/dropbox/: plugin.toml
plugins/dropbox/assets/: Cargo.toml  README.md  plugin.toml
plugins/dropbox/assets/src/: lib.rs
plugins/example-remote/: plugin.toml
plugins/onedrive/: plugin.toml
plugins/powerpacker/: plugin.lua  plugin.toml
plugins/sqlite_tables_csv/: plugin.lua  plugin.toml
plugins/vcard_viewer/: plugin.toml
scripts/: compile_store.py  update-local-plugin-paths.sh
