[package]
name = "kkc-remote-dropbox"
version = "0.1.0"
edition = "2024"
description = "Dropbox remote plugin for kkc-rust"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.3"
kkc-plugin-api = { path = "../../../../kkc-rust/crates/kkc-plugin-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.10", default-features = false, features = ["native-tls"] }
